--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "mime-db": "^1.45.0",
     "mongodb": "^3.6.3",
